--- a/Snake Game.vcxproj
+++ b/Snake Game.vcxproj
@@ -71,6 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>E:\Users\Tanay\Resources\SDL\SDL Complete\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Users\Tanay\Resources\SDL\SDL Complete\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -93,6 +95,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -146,14 +149,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Source Files\Headers\Event.hpp" />
+    <ClInclude Include="Source Files\Headers\EventListener.hpp" />
     <ClInclude Include="Source Files\Headers\GameLogic.hpp" />
     <ClInclude Include="Source Files\Headers\Application.hpp" />
+    <ClInclude Include="Source Files\Headers\IEventHandler.hpp" />
     <ClInclude Include="Source Files\Headers\IGameView.hpp" />
+    <ClInclude Include="Source Files\Headers\Timer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Source\Application.cpp" />
+    <ClCompile Include="Source Files\Source\Event.cpp" />
+    <ClCompile Include="Source Files\Source\EventListener.cpp" />
     <ClCompile Include="Source Files\Source\GameLogic.cpp" />
+    <ClCompile Include="Source Files\Source\IEventHandler.cpp" />
     <ClCompile Include="Source Files\Source\IGameView.cpp" />
+    <ClCompile Include="Source Files\Source\Main.cpp" />
+    <ClCompile Include="Source Files\Source\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
