--- a/Snake Game.vcxproj
+++ b/Snake Game.vcxproj
@@ -150,11 +150,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Headers\Application.hpp" />
+    <ClInclude Include="Source Files\Headers\Food.hpp" />
+    <ClInclude Include="Source Files\Headers\PixelMap.hpp" />
+    <ClInclude Include="Source Files\Headers\Snake.hpp" />
     <ClInclude Include="Source Files\Headers\Timer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Source\Application.cpp" />
+    <ClCompile Include="Source Files\Source\Food.cpp" />
     <ClCompile Include="Source Files\Source\Main.cpp" />
+    <ClCompile Include="Source Files\Source\PixelMap.cpp" />
+    <ClCompile Include="Source Files\Source\Snake.cpp" />
     <ClCompile Include="Source Files\Source\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
