Revert "completed the pixel map class"
This reverts commit 5ecbfac441a5cb5a2f57c0528dff36dbf0b19138.

--- a/.gitignore
+++ b/.gitignore
@@ -166,8 +166,8 @@ csx/
 ecf/
 rcf/
 
-# Microsoft Azure GameInsights config file
-GameInsights.config
+# Microsoft Azure ApplicationInsights config file
+ApplicationInsights.config
 
 # Windows Store app package directory
 AppPackages/
