--- a/Snake Game.vcxproj
+++ b/Snake Game.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Headers\Application.hpp" />
+    <ClInclude Include="Source Files\Headers\Food.hpp" />
     <ClInclude Include="Source Files\Headers\Game.hpp" />
     <ClInclude Include="Source Files\Headers\PixelMap.hpp" />
     <ClInclude Include="Source Files\Headers\Position.hpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="Source Files\Headers\Timer.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source Files\Source\Food.cpp" />
     <ClCompile Include="Source Files\Source\Position.cpp" />
     <ClCompile Include="Source Files\Source\Snake.cpp" />
     <ClCompile Include="Source Files\Source\Application.cpp" />
